[package]
name = "rust-axum-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenvy = "0.15.7"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
